# FoodServer

./: .gitignore  CMakeLists.txt  CommunicatorExceptions.hpp  Enums.hpp  FileManager.cpp  FileManager.hpp  FindMySQL.cmake  IDB.hpp  Logger.cpp  Logger.hpp  MessageManager.cpp  MessageManager.hpp  NetCommunicator.cpp  NetCommunicator.hpp  NetMessenger.cpp  NetMessenger.hpp  Server.cpp  Server.hpp  TCPCommunicator.cpp  TCPCommunicator.hpp  UDPCommunicator.cpp  UDPCommunicator.hpp  UnitConversions.hpp  WebScraper.cpp  WebScraper.hpp  cmake_install.cmake  dbConnector.cpp  dbConnector.hpp  debug_tcp.cpp  httpreq.cpp  httpreq.hpp  main.cpp
pages/: index.html  style.css  template.html
test_src/: mockdbConnector.cpp  test.cpp  test.txt
